--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+    <link rel="shortcut icon" href="/img/icon/icon.ico">
+    
+    <!--responsividade-->
+    <link rel="stylesheet" href="style/responsive.css">
     
     <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
@@ -17,12 +21,17 @@
     <header>
         <div class="container">
             <h2><a href="#"><img src="img/netflix-logo.png" alt="Netflix" class="logo"></a></h2>
-            <nav>
+            <nav class="leftnav">
                 <a href="#">Home</a>
                 <a href="#">TV Shows</a>
                 <a href="#">Movies</a>
                 <a href="#">New & Popular</a>
                 <a href="#">My List</a>
+            </nav>
+            <nav class="rightnav">
+                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                <a href="#"><i class="fa-solid fa-bell"></i></a>
+                <a href="#"><i class="fa-solid fa-user"></i></a>
             </nav>
         </div>
     </header>
